--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,9 @@
 [tool.poetry]
-name = "async-redis-queue"
+name = "async_redis_queue"
 version = "0.1.0"
 description = ""
 authors = ["Dmitrij Vinokour <dimfred.1337@web.de>"]
 license = "MIT"
-readme = "README.md"
 packages = [{include = "async_redis_queue"}]
 
 [tool.poetry.dependencies]
